Fix maven compile and complete group chat backend